use utils to get has unmet access restriction status